--- a/static/css/main.css
+++ b/static/css/main.css
@@ -63,7 +63,7 @@ label {
 
 .content-box {
   margin-top: 30px;
-  background-color: rgba(68, 68, 78, 0.85);
+  background-color: rgba(68, 68, 78, 0.95);
   border-radius: 3px;
   color: #FFF;
   box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.5), 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
@@ -223,6 +223,11 @@ td {
   box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.5), 1px 1px 5px 0px rgba(0, 0, 0, 0.5)
 }
 
+.panel-footer {
+  background-color: rgba(0,0,0,0.25);
+  border: 0px;
+}
+
 .centered {
   display: block;
   margin-left: auto;
@@ -372,5 +377,9 @@ img {
   margin: 0px;
   min-width: 250px;
   border-bottom: 1px solid #ddd; }
+
+.media {
+  margin: 20px;
+}
 
 /*# sourceMappingURL=main.css.map */
