--- a/templates/base.html
+++ b/templates/base.html
@@ -57,22 +57,13 @@ refurence
             <!-- Right links -->
             <ul class="nav navbar-nav navbar-right">
 
-                {% include "security/_menu.html" %}
+                {% if not dropbox.is_authenticated %}
+                <li> <a href="{{dropbox.login_url}}">login with dropbox</a> </li>
+                {% else %}
+                <li> <a href="{{ url_for('users.controlpanel')}}">{{dropbox.account_info['email']}}</a></li>
+                <li><a href="{{dropbox.logout_url}}">logout</a> </li>
+                {% endif %}
 
-
-                <!--
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>-->
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -83,9 +74,7 @@ refurence
 {% endblock %}
 
 
-
 {% block footer %}
-
 {% endblock %}
 
 
