--- a/templates/profiles/me.html
+++ b/templates/profiles/me.html
@@ -2,7 +2,7 @@
 
 {% block header%}
 <div class="col-xs-4">
-<a class="btn btn-dark btn-lg" type="button" href="{{ url_for('profiles.edit', slug=current_user.username) }}">
+<a class="btn btn-dark btn-lg" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
 <span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
 Edit Profile
 </a>
