--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 <div class="container">
 <div class="jumbotron centered fill-transparent">
   <h1 class="blurred" style="color:white;font-size:150px">refurence</h1>
-    <div class="fill-low-opacity">
+    <div>
         <p style="font-size:32px">visual & character references</p>
         <p>art by Killian Eng and Stigmata</p>
     </div>
