--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,7 @@ refurence
 
 {% block styles %}
     {{super()}}
-
-    <link rel="stylesheet" href="/static/css/main.css"/>
-
-    <link rel="stylesheet" href="/static/css/blueimp-gallery.min.css"/>
-    <link rel="stylesheet" href="/static/css/fontselect.css"/>
-
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 {% endblock %}
 
 
