--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -7,9 +7,11 @@
 {% endblock %}
 
 {%- block styles-%}
+<link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/dropzone.min.css" rel='stylesheet' type="text/css">
 {{ super() }}
-<link href={{ url_for('static', filename='css/spectrum.css') }} rel='stylesheet' type="text/css">
 <link href={{ url_for('static', filename='css/fontselect.css') }} rel='stylesheet' type="text/css">
+<link href= "https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.css" rel='stylesheet' type="text/css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/basic.min.css" rel='stylesheet' type="text/css">
 {%- endblock -%}
 
 {% block sidebar %}
@@ -179,8 +181,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src={{url_for('static', filename="js/sijax/sijax.js") }}></script>
-<script type="text/javascript" src={{url_for('static', filename="js/spectrum.js") }}></script>
 <script type="text/javascript" src={{url_for('static', filename="js/jquery.fontselect.min.js") }}></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js"></script>
 <script type="text/javascript">
 {{ g.sijax.get_js()|safe }}
@@ -203,10 +205,7 @@
     }
   });
 </script>
-<script type="text/javascript" src={{url_for('static', filename="js/sijax/sijax.js") }}></script>
-<script type="text/javascript" src={{url_for('static', filename="js/spectrum.js") }}></script>
-<script type="text/javascript" src={{url_for('static', filename="js/jquery.fontselect.min.js") }}></script>
-<script type="text/javascript" src={{url_for('static', filename="js/dropzone.js") }}></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/dropzone.min.js"></script>
 <script type="text/javascript">
 {{ g.sijax.get_js()|safe }}
 </script>
